Fix issue command not working (#45)
Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>